hphp/hack/test/typecheck/idx_too_many_args.php.exp
File "idx_too_many_args.php", line 9, characters 8-31:
Too many arguments (expected 3 but got 4) (Typing[4105])
File "idx.hhi", line 31, characters 10-12:
Definition is here
