hphp/hack/test/typecheck/idx_too_many_args.php
<?hh

function m(): Map<string, int> {
  return Map {};
}

function f(): ?int {
  $m = m();
  $x = idx($m, 'a', null, null);
  return $x;
}
